# Projet2DGame

./: Conception d’un Jeu Vidéo.docx  ProjectMonitoring.txt  README.md  class.uxf
Astroid/: Makefile  astroid-app  main.cpp
HelpRessource/: MakeFile-model.txt  astroid_uml.uxf
HelpRessource/Astroid/: Makefile  astroid-app  main.cpp
dev/: Animation.cpp  Animation.h  CMakeLists.txt  Decors.cpp  Decors.h  DestructibleDecor.cpp  DestructibleDecor.h  Direction.cpp  Direction.h  Element.cpp  Element.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Fighter.cpp  Fighter.h  IndestructableDecor.cpp  IndestructableDecor.h  MoveDestructDecor.cpp  MoveDestructDecor.h  MoveIndestructDecor.cpp  MoveIndestructDecor.h  MoveableDecor.cpp  MoveableDecor.h  Object.cpp  Object.h  Personage.cpp  Personage.h  Personnage.cpp  Personnage.h  Projectile.cpp  Projectile.h  Shooter.cpp  Shooter.h  Stats.cpp  Stats.h  main.cpp
test_app/: CMakeLists.txt  main.cpp
